[package]
name = "feature_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
keri = { git = "https://github.com/decentralized-identity/keriox.git", branch="prefix_feature", features = ["prefix"] }

[lib]
crate-type = ["cdylib"]